--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
 			<version>3.0</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.6</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sourceforge.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
 			<version>1.3.2</version>
@@ -207,7 +212,7 @@
 				<version>2.2</version>
 				<configuration>
 					<warSourceDirectory>${basedir}/web</warSourceDirectory>
-
+					
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
