--- a/src/db.properties
+++ b/src/db.properties
@@ -4,8 +4,18 @@ password=123456
 driverClass=com.mysql.jdbc.Driver
 temp=%s?user=%s&password=%s&useUnicode=true&characterEncoding=utf-8
 
-# mybatis
-JDBC.url=jdbc:mysql://localhost:3306/yike?useUnicode=true&amp;characterEncoding=UTF8
-JDBC.user=yike
+
+
+
+#Pagination
+page.size=20
+#Environment
+mybatis.environment.id=development
+
+# Local database properties
+# ----------------------------
+JDBC.provider=MySQL
+JDBC.username=yike
 JDBC.password=123456
-JDBC.driverClass=com.mysql.jdbc.Driver
+JDBC.url=jdbc:mysql://localhost:3306/yike?useUnicode=true&amp;characterEncoding=UTF8
+JDBC.driver=com.mysql.jdbc.Driver
