--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<mockito.version>1.10.8</mockito.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<guava.version>18.0</guava.version>
+		<resteasy.version>3.0.9.Final</resteasy.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<commons-io.version>2.4</commons-io.version>
 		<slf4j.version>1.7.5</slf4j.version>
@@ -61,13 +62,19 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-guice</artifactId>
-			<version>3.0.9.Final</version>
+			<version>${resteasy.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson-provider</artifactId>
-			<version>3.0.9.Final</version>
+			<version>${resteasy.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson2-provider</artifactId>
+			<version>${resteasy.version}</version>
 		</dependency>
 
 		<dependency>
@@ -75,6 +82,8 @@
 			<artifactId>jackson-xc</artifactId>
 			<version>1.9.12</version>
 		</dependency>
+		
+		
 
 
 
