--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<guava.version>18.0</guava.version>
 		<resteasy.version>3.0.9.Final</resteasy.version>
+		<mybatis.version>3.2.8</mybatis.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<commons-io.version>2.4</commons-io.version>
 		<slf4j.version>1.7.5</slf4j.version>
@@ -70,7 +71,7 @@
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<version>${resteasy.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson2-provider</artifactId>
@@ -82,8 +83,8 @@
 			<artifactId>jackson-xc</artifactId>
 			<version>1.9.12</version>
 		</dependency>
-		
-		
+
+
 
 
 
@@ -119,12 +120,7 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-			<scope>test</scope>
-		</dependency>
+
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
@@ -174,20 +170,28 @@
 			<scope>test</scope>
 		</dependency>
 
+
+
+
+
+
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>${slf4j.version}</version>
+			<groupId> org.apache.cassandra</groupId>
+			<artifactId>cassandra-all</artifactId>
+			<version>2.1.5</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+			</exclusions>
+
 		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-
-
 
 
 
@@ -221,7 +225,7 @@
 				<version>2.2</version>
 				<configuration>
 					<warSourceDirectory>${basedir}/web</warSourceDirectory>
-					
+					<version>3.1</version>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
