--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -55,6 +55,17 @@
 	</context-param>
 
 
+	<filter>
+		<filter-name>guiceFilter</filter-name>
+		<filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>guiceFilter</filter-name>
+		<url-pattern>/guice/*</url-pattern>
+	</filter-mapping>
+
+
 
 
 	<welcome-file-list>
